--- a/2.Rmd
+++ b/2.Rmd
@@ -5,39 +5,37 @@ date: "2024-11-12"
 output: html_document
 ---
 
-### 2.a
+### Part 2
+
 First we look at the head of the data to see how does the data look like.And also to check the variables types. As we can see all the variables are numbbers num or int.
 
 ```{r}
 df <- read.csv("miami-housing.csv")
 data<-df
-#head(data)
 str(data)
 summary(data)
 
 ```
+#### Corellation
 In this step we want to look that variables that have more than 0.5 absolute correlation with each other.
 ```{r}
-# Compute correlations
+
 correlations <- cor(data, use = "complete.obs")
 
-# Find pairs with an absolute correlation greater than 0.5 and less than 1 (to exclude self-correlations)
 high_corr <- which(abs(correlations) > 0.5 & abs(correlations) < 1, arr.ind = TRUE)
 
-# Create a data frame with the filtered high correlations
 high_corr_pairs <- data.frame(
   Column1 = rownames(correlations)[high_corr[, 1]],
   Column2 = colnames(correlations)[high_corr[, 2]],
   Correlation = correlations[high_corr]
 )
 
-# Remove duplicate pairs (where Column1 and Column2 are swapped)
 high_corr_pairs <- high_corr_pairs[!duplicated(t(apply(high_corr_pairs[, 1:2], 1, sort))), ]
 
-# Display the result
 print(high_corr_pairs)
 
 ```
+#### Removing duplicated rows
 
 Check if the Parcelno is the a unique identifier ?
 As we see there are some rows that have the same parcelno numbers.It means they are different records for the same property. So since the data is for one yearwe will consider the later month and delete the earlier months.
@@ -50,31 +48,27 @@ CHECK IF ALWAYS THE LAST MONTHES HAS THE HIGHER PRICES?
 AS we see the higher price is not always for the last month.
 ```{r}
 library(dplyr)
-# Filter rows with duplicate PARCELNO values, add max_month, and check opposite flags
 result <- data %>%
   filter(duplicated(PARCELNO) | duplicated(PARCELNO, fromLast = TRUE)) %>%
   group_by(PARCELNO) %>%
   arrange(PARCELNO, month_sold) %>%
   mutate(
-    max_month = max(month_sold),                        # Add max_month as the highest MONTH_SOLD for each PARCELNO
-    is_latest_month = month_sold == max_month,          # Check if this row is for the latest month
-    is_price_higher_for_latest_month = SALE_PRC == max(SALE_PRC[is_latest_month])  # Check if SALE_PRC is highest for latest month
+    max_month = max(month_sold),                    
+    is_latest_month = month_sold == max_month,         
+    is_price_higher_for_latest_month = SALE_PRC == max(SALE_PRC[is_latest_month]) 
   ) %>%
   ungroup() %>%
-  filter(is_latest_month != is_price_higher_for_latest_month)  # Filter rows where flags are opposite
+  filter(is_latest_month != is_price_higher_for_latest_month) 
 
-# Display the result
 print(result)
 ```
 
 FILTER THE ROW THAT HAVE SAME PARVELNO AND DIFFERENT MONTHES WITH THE LAST MONTH.
 We keep the record with the last month for the rows that have equal parcelno.
 ```{r}
-# Install and load dplyr if you haven't already
+
 library(dplyr)
 
-# Group by parcelno and keep only the row with the maximum month_sold value
-data <- data %>%
   group_by(PARCELNO) %>%
   filter(month_sold == max(month_sold)) %>%
   ungroup()
@@ -88,10 +82,9 @@ duplicate_rows
 FOR THE RECORDS WITH THE SAME MONTH AND THE SAME PARCELNO WE CACULATE THE AVERAGAE SALE_PRC.
 
 ```{r}
-# Load dplyr
+
 library(dplyr)
 
-# Aggregate by PARCELNO, calculating the average SALE_PRC, and keeping the first value of other columns
 aggregated_data <- data %>%
   group_by(PARCELNO) %>%
   summarise(
@@ -108,7 +101,6 @@ duplicate_rows
 ```
 Now we have a clean data that dosent have duplicated PARCELNO.
 ```{r}
-
 data<-aggregated_data
 ```
 ### 2.b. Statistical properties
@@ -121,43 +113,34 @@ correlations <- cor(data[sapply(data, is.numeric)], use = "complete.obs")
 print(correlations)
 
 ```
-
-
-### 2.c.
-Missing values.
+#### Missing values
 The data is clean and we dont have any missing data.
 
 ```{r}
 colSums(is.na(data))
 ```
 
-Distribution of the numeric values 
+#### Distribution of the numeric values and plots
 We use boxplot and histogram to look that the distribution of the varibles.
 
 ```{r}
 
-# Remove the PARCELNO column if it exists
 numeric_cols <- data[sapply(data, is.numeric)]
 numeric_cols$PARCELNO <- NULL
-
-# Define the columns for which we want bar plots
 barplot_columns <- c("structure_quality", "month_sold", "avno60plus", "age")
 
-# Loop through each numeric column and plot accordingly
 for (col in names(numeric_cols)) {
   if (col %in% barplot_columns) {
-    # Create a bar plot to display the frequency of each unique value
+  
     freq_table <- table(numeric_cols[[col]])
     barplot(freq_table, main = paste("Frequency of values in", col), xlab = col, ylab = "Frequency", 
             col = "lightblue", border = "black")
   } else {
-    # Create a simple histogram for other numeric columns
     hist(numeric_cols[[col]], main = paste("Histogram of", col), xlab = col, col = "lightblue", border = "black")
   }
 }
 
 
-# Boxplot for each numerical attribute
 boxplot(numeric_cols, main = "Boxplot of Numerical Attributes", las = 2)
 ```
 
@@ -186,13 +169,8 @@ print(outliers)
 We Wanted to see if there is any outlier in the data or not. We considered "avg_sale_prc", "age", "LND_SQFOOT", "structure_quality", "CNTR_DIST" and made the scatterplot for them as we can see there is not any specific outlier with the combined variables.
 
 ```{r}
-# Load the necessary library
 library(GGally)
-
-# Select only the specified columns
 selected_data <- data[, c("SALE_PRC", "age", "LND_SQFOOT", "structure_quality", "CNTR_DIST")]
-
-# Create a scatterplot matrix with reduced alpha for the points
 ggpairs(selected_data, 
         title = "Scatterplot Matrix for Selected Variables")
 
@@ -214,11 +192,9 @@ ggplot(data, aes(x = age, y = CNTR_DIST)) +
 ```
 ```{r}
 library(ggplot2)
-
-# Scatterplot with linear regression trend line
 ggplot(data, aes(x = TOT_LVG_AREA, y = SPEC_FEAT_VAL)) +
   geom_point(color = "blue", size = 2, alpha = 0.5) +
-  geom_smooth(method = "lm", color = "red", se = FALSE) + # Linear trend line
+  geom_smooth(method = "lm", color = "red", se = FALSE) +
   labs(title = "Total Living Area vs Special Feature Value with Trend Line",
        x = "Total Living Area",
        y = "Special Feature Value") +
@@ -229,10 +205,9 @@ ggplot(data, aes(x = TOT_LVG_AREA, y = SPEC_FEAT_VAL)) +
 ```{r}
 library(ggplot2)
 
-# Scatterplot with linear regression trend line
 ggplot(data, aes(x = TOT_LVG_AREA, y = SALE_PRC)) +
   geom_point(color = "blue", size = 2, alpha = 0.5) +
-  geom_smooth(method = "lm", color = "red", se = FALSE) + # Linear trend line
+  geom_smooth(method = "lm", color = "red", se = FALSE) +
   labs(title = "Scatterplot of Total Living Area vs Sale Price",
        x = "Total Living Area",
        y = "Sale Price") +
@@ -240,10 +215,8 @@ ggplot(data, aes(x = TOT_LVG_AREA, y = SALE_PRC)) +
 
 ```
 ```{r}
-# Convert structure_quality to a factor if it's not already
 data$structure_quality <- as.factor(data$structure_quality)
 
-# Scatterplot
 plot(data$structure_quality, data$SALE_PRC,
      xlab = "Structure Quality Grades",
      ylab = "Sale Price",
@@ -256,59 +229,51 @@ plot(data$structure_quality, data$SALE_PRC,
 
 
 
-
+#### Turning LATITUDE & LONGTITUDE columns to zipcodes
 ```{r}
-# Install necessary packages
 
-# Load libraries
 library(sf)
 library(tigris)
 library(dplyr)
-# Use caching to speed up subsequent downloads
+
 options(tigris_use_cache = TRUE)
 
-# Download ZCTAs shapefile
 zctas <- zctas(cb = TRUE, year = 2016)  # Adjust the year as needed
-
-
-
 
 ```
 
 ```{r}
 df<-data 
-# Ensure your dataframe has numeric latitude and longitude
 df$LATITUDE <- as.numeric(df$LATITUDE)
 df$LONGITUDE <- as.numeric(df$LONGITUDE)
 
-# Remove rows with missing coordinates
 df <- df %>% filter(!is.na(LATITUDE) & !is.na(LONGITUDE))
 
-# Convert to sf object with WGS84 CRS (EPSG:4326)
 df_sf <- st_as_sf(df, coords = c("LONGITUDE", "LATITUDE"), crs = 4326)
-# Transform ZCTAs to match df_sf CRS if necessary
+
 zctas <- st_transform(zctas, st_crs(df_sf))
-# Perform spatial join to attach ZIP codes
 names(zctas)
 ```
 ```{r}
-# Set the correct ZIP code column name
-zip_code_column <- "ZCTA5CE10"  # Or "GEOID10", both contain ZIP code information
-# Perform spatial join using the correct ZIP code column
+
+zip_code_column <- "ZCTA5CE10" 
+
 df_with_zip <- st_join(df_sf, zctas[zip_code_column], left = TRUE)
-# Rename the ZIP code column for clarity
+
 df_with_zip <- df_with_zip %>% rename(ZIP_CODE = all_of(zip_code_column))
 
 
 ```
 ```{r}
-# Remove the 'geometry' column from 'df'
 df_with_zip$geometry <- NULL
 unique(df_with_zip$ZIP_CODE) 
 
 
+
 ```
-Preprocessing:
+### Part 3
+
+####Preprocessing:
 First we remove the identifier from the data . It is not nessecary when we want to give the data to the model.
 Then as we saw on the plot the sale_prc has a right skewed distribution so we just get the log out of it to have a better distributin of it.
 
@@ -342,17 +307,7 @@ df_with_zip[numerical_cols] <- scale(df_with_zip[numerical_cols])
 ```{r,echo=FALSE}
 install.packages("fastDummies")
 ```
-For month_sold and structure_quality columns we transform them with one_hot encoding.
-```{r}
-library(fastDummies) 
-
-# Create dummy variables for 'month_sold'
-df_with_zip <- dummy_cols(df_with_zip, select_columns = "month_sold", remove_first_dummy = TRUE, remove_selected_columns = TRUE)
-
-# Create dummy variables for 'structure_quality'
-df_with_zip <- dummy_cols(df_with_zip, select_columns = "structure_quality", remove_first_dummy = TRUE, remove_selected_columns = TRUE)
-
-```
+For preprocessing the zipcode column we decided to make another coulmn call region which is the district of the zipcode.With that we will have 13 distingushed district which is easier to use one-hot encoding on it.
 
 ```{r}
 library(dplyr)
@@ -397,16 +352,22 @@ df_with_zip <- merge(df_with_zip, zip_region_df, by = "ZIP_CODE", all.x = TRUE)
 # Assign 'Other' to missing regions
 df_with_zip$Region[is.na(df_with_zip$Region)] <- "Other"
 ```
+```{r}
+unique(df_with_zip$Region) 
+
+
+```
 
 ```{r}
 # Encode 'Region' (choose one encoding method)
-
-# Option A: One-Hot Encoding
-df_with_zip$Region <- as.factor(df_with_zip$Region)
-region_dummies <- model.matrix(~ Region - 1, data = df_with_zip)
-df_with_zip <- cbind(df_with_zip, region_dummies)
+df_with_zip <- dummy_cols(df_with_zip, select_columns = "Region", remove_first_dummy = TRUE, remove_selected_columns = TRUE)
 
 
+```
+
+
+```{r}
+data<-df_with_zip
 ```
 
 
